<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JRedaProgrammingAssignment</string>
    <string name="hello_world">Hello world!</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>

    <!-- initial button row values -->
    <string name="add_product_button_label">Create Product</string>
    <string name="show_product_button_label">Show Products</string>

    <!-- add product method values -->
    <string name="add_product_method_title">Choose Method</string>
    <string name="from_file">From File</string>
    <string name="enter_manually">Enter Manually</string>
    <string name="internal_system">Internal Randomizer</string>
    <string name="add_product_method_options_title_default_text">Select Option</string>
    <string name="from_sql_db">From SQL Database</string>
    <string name="title_activity_show_products">ShowProductsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="num_colors"># of Colors</string>
    <string name="num_stores"># of Stores</string>
    <string name="manual_entry_disclaimer">Available colors, image, and store stock information will be automatically populated based on input below</string>
    <string name="sale_price">Sale Price</string>
    <string name="reg_price">Regular Price</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="str_new">New</string>
    <string name="from_assets">From Assets</string>
    <string name="from_web_server">From Web Server</string>
    <string name="create_database">Create Database</string>
    <string name="run">Run</string>
    <string name="num_entries"># of Entries</string>
    <string name="show_file_contents">Show File</string>
    <string name="load_file">Load File</string>
    <string name="large_product_image">Large Product Image</string>
    <string name="small_product_image">Small Product Image</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="default_price">20.00</string>

</resources>
