<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FirstActivity"
    android:orientation="vertical"
    android:id="@+id/activity_first_top_level_LL">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:buttonBarButtonStyle"
        android:background="@color/gray_189"
        android:id="@+id/initial_buttons_row_LL">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product_button_label"
            android:id="@+id/add_product_BUT"
            android:layout_weight="1"
            style="?android:borderlessButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_product_button_label"
            android:id="@+id/show_product_BUT"
            android:layout_weight="1"
            style="?android:borderlessButtonStyle"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_first_main_SV">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_first_main_SV_container_LL"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/create_product_method_LL"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="visible"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/add_product_method_LL"
                    android:orientation="vertical"
                    android:background="@color/gray_189"
                    android:layout_marginRight="@dimen/half_activity_vertical_margin"
                    tools:ignore="RtlHardcoded">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_product_method_title"
                        android:id="@+id/add_product_method_title_TV"
                        style="@style/TextViewTitle"/>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/add_product_method_RG">
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/from_file"
                            android:id="@+id/apm_from_file_RB"
                            style="@style/TextViewNormal"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/internal_system"
                            android:id="@+id/apm_internal_system_RB"
                            style="@style/TextViewNormal"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enter_manually"
                            android:id="@+id/apm_enter_manually_RB"
                            style="@style/TextViewNormal"/>
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/add_product_method_options_LL"
                    android:orientation="vertical"
                    android:visibility="visible"
                    android:background="@color/gray_189"
                    android:layout_marginLeft="@dimen/half_activity_vertical_margin"
                    tools:ignore="RtlHardcoded">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_product_method_options_title_default_text"
                        android:id="@+id/add_product_method_options_title_TV"
                        style="@style/TextViewTitle"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/from_file_options_LL"
                        android:orientation="vertical"
                        style="?android:borderlessButtonStyle">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="?android:borderlessButtonStyle"
                            android:text="Load File"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="?android:borderlessButtonStyle"
                            android:text="Load File"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="?android:borderlessButtonStyle"
                            android:text="Load File"/>

                    </LinearLayout>

                </LinearLayout> <!--end add product methods ll-->

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/show_product_LL"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="visible"
                android:baselineAligned="false">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_product_method_options_title_default_text"
                    style="@style/TextViewTitle"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
