<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/off_white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.justinreda.jredaprogrammingassignment.ProductDetailsActivity">

    <LinearLayout
        android:id="@+id/product_details_LL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:animateLayoutChanges="false"
                android:orientation="vertical">

                <TextView
                    style="@style/ShowProductTextViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name" />

                <TextView
                    android:id="@+id/product_details_name_TV"
                    style="@style/ShowProductTextViewNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Test Name Label"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/product_details_name_ET"
                    style="@style/ShowProductTextViewNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:text="Test Name Label"
                    android:visibility="gone" />
            </LinearLayout>

            <ImageView
                android:id="@+id/small_product_image_IV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/large_product_image" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="false"
            android:orientation="vertical">

            <TextView
                style="@style/ShowProductTextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Description" />

            <EditText
                android:id="@+id/product_details_description_ET"
                style="@style/ShowProductTextViewNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:maxLines="25"
                android:text="@string/lorem_ipsum" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_details_pricing_LL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:animateLayoutChanges="false"
                android:orientation="vertical">

                <TextView
                    style="@style/ShowProductTextViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Regular Price" />

                <EditText
                    android:id="@+id/product_details_reg_price_ET"
                    style="@style/ShowProductTextViewNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/reg_price"
                    android:inputType="numberDecimal"
                    android:text="25.00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:animateLayoutChanges="false"
                android:orientation="vertical">

                <TextView
                    style="@style/ShowProductTextViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Sale Price" />

                <EditText
                    android:id="@+id/product_details_sale_price_ET"
                    style="@style/ShowProductTextViewSale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/sale_price"
                    android:inputType="numberDecimal"
                    android:text="20.00" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_details_colors_LL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_details_stores_LL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/product_details_update_BUT"
                style="?android:borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Update" />

            <Button
                android:id="@+id/product_details_delete_BUT"
                style="?android:borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Delete" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_image_LL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/big_product_image_IV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/large_product_image"
            android:scaleType="fitCenter" />
    </LinearLayout>

</RelativeLayout>
